# experiments

./: CMakeLists.txt  README.md
lib/: Json.cpp  Json.h  Preprocessor.h  ReflectiveStruct.h
src/: Configuration.cpp  Decorators.cpp  Reflective.cpp  Subscriber.cpp  VariantFromTemplate.cpp
